--- a/app/app.component.html
+++ b/app/app.component.html
@@ -23,4 +23,7 @@
     </div>
 </nav>
 
-<router-outlet></router-outlet>
+<pomodoro-router-outlet
+    protectedPath="tasks/editor"
+    loginUrl="login">
+</pomodoro-router-outlet>
